# qna-agent-poc-rust

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/health/: router.rs
src/shared/: configs.rs  mod.rs
src/vector_store/: mod.rs  qdrant_wrapper.rs
tests/: lib.rs
tests/health/: health_test.rs  helpers.rs  test_health.rs
tools/: populate_db.py
