[package]
name = "qna-agent-poc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.6"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
